syntax = "proto3";

option go_package = "authentication/v1;authentication";

package authentication.v1;

// Authentication service
service AuthenticationService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

// Login request
message LoginRequest {
  string username = 1;
  string password = 2;
}

// Login response
message LoginResponse {
  string token = 1;
}

// Logout request
message LogoutRequest {
  string token = 1;
}

// Logout response
message LogoutResponse {
  bool success = 1;
}
